# QRCat

./: .gitignore  CMakeLists.txt  Set_Libs_RUNPATH.cmake.in  build_release.py  qrcat.cpp  release.py  set_libs_runpath.cmake.in  set_libs_runpath.py  vcpkg.json
.github/workflows/: cmake-release.yml
scripts/: set_libs_runpath.cmake.in  set_libs_runpath.py  sign_binaries_windows.cmake.in  sign_binaries_windows.py
